Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> LBRACE decls stmts RBRACE
Rule 2     decls -> decl
Rule 3     decls -> decls SEMICOLON decl
Rule 4     decl -> ids COLON type
Rule 5     ids -> IDENTIFIER
Rule 6     ids -> ids COMMA IDENTIFIER
Rule 7     type -> INT
Rule 8     type -> REAL
Rule 9     type -> BOOLEAN
Rule 10    stmts -> stmt
Rule 11    stmts -> stmts SEMICOLON stmt
Rule 12    stmt -> IF expr THEN stmt ELSE stmt
Rule 13    stmt -> WHILE expr DO stmt
Rule 14    stmt -> FOR IDENTIFIER ASSIGN expr TO expr DO stmts
Rule 15    stmt -> READ LPAREN ids RPAREN
Rule 16    stmt -> WRITELN LPAREN expr RPAREN
Rule 17    stmt -> WRITELN LPAREN ids RPAREN
Rule 18    stmt -> IDENTIFIER ASSIGN expr
Rule 19    expr -> expr EQUAL expr
Rule 20    expr -> expr NEQUAL expr
Rule 21    expr -> expr LT expr
Rule 22    expr -> expr GT expr
Rule 23    expr -> expr LE expr
Rule 24    expr -> expr GE expr
Rule 25    expr -> expr PLUS expr
Rule 26    expr -> expr MINUS expr
Rule 27    expr -> expr TIMES expr
Rule 28    expr -> expr DIVIDE expr
Rule 29    expr -> expr OR expr
Rule 30    expr -> expr AND expr
Rule 31    expr -> NOT expr
Rule 32    expr -> LPAREN expr RPAREN
Rule 33    expr -> IDENTIFIER
Rule 34    expr -> NUMBER
Rule 35    expr -> TRUE
Rule 36    expr -> FALSE

Terminals, with rules where they appear

AND                  : 30
ASSIGN               : 14 18
BOOLEAN              : 9
COLON                : 4
COMMA                : 6
DIVIDE               : 28
DO                   : 13 14
ELSE                 : 12
EQUAL                : 19
FALSE                : 36
FOR                  : 14
GE                   : 24
GT                   : 22
IDENTIFIER           : 5 6 14 18 33
IF                   : 12
INT                  : 7
LBRACE               : 1
LE                   : 23
LPAREN               : 15 16 17 32
LT                   : 21
MINUS                : 26
NEQUAL               : 20
NOT                  : 31
NUMBER               : 34
OR                   : 29
PLUS                 : 25
RBRACE               : 1
READ                 : 15
REAL                 : 8
RPAREN               : 15 16 17 32
SEMICOLON            : 3 11
THEN                 : 12
TIMES                : 27
TO                   : 14
TRUE                 : 35
WHILE                : 13
WRITELN              : 16 17
error                : 

Nonterminals, with rules where they appear

decl                 : 2 3
decls                : 1 3
expr                 : 12 13 14 14 16 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32
ids                  : 4 6 15 17
program              : 0
stmt                 : 10 11 12 12 13
stmts                : 1 11 14
type                 : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . LBRACE decls stmts RBRACE

    LBRACE          shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> LBRACE . decls stmts RBRACE
    (2) decls -> . decl
    (3) decls -> . decls SEMICOLON decl
    (4) decl -> . ids COLON type
    (5) ids -> . IDENTIFIER
    (6) ids -> . ids COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 6

    decls                          shift and go to state 3
    decl                           shift and go to state 4
    ids                            shift and go to state 5

state 3

    (1) program -> LBRACE decls . stmts RBRACE
    (3) decls -> decls . SEMICOLON decl
    (10) stmts -> . stmt
    (11) stmts -> . stmts SEMICOLON stmt
    (12) stmt -> . IF expr THEN stmt ELSE stmt
    (13) stmt -> . WHILE expr DO stmt
    (14) stmt -> . FOR IDENTIFIER ASSIGN expr TO expr DO stmts
    (15) stmt -> . READ LPAREN ids RPAREN
    (16) stmt -> . WRITELN LPAREN expr RPAREN
    (17) stmt -> . WRITELN LPAREN ids RPAREN
    (18) stmt -> . IDENTIFIER ASSIGN expr

    SEMICOLON       shift and go to state 8
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITELN         shift and go to state 15
    IDENTIFIER      shift and go to state 13

    stmts                          shift and go to state 7
    stmt                           shift and go to state 9

state 4

    (2) decls -> decl .

    SEMICOLON       reduce using rule 2 (decls -> decl .)
    IF              reduce using rule 2 (decls -> decl .)
    WHILE           reduce using rule 2 (decls -> decl .)
    FOR             reduce using rule 2 (decls -> decl .)
    READ            reduce using rule 2 (decls -> decl .)
    WRITELN         reduce using rule 2 (decls -> decl .)
    IDENTIFIER      reduce using rule 2 (decls -> decl .)


state 5

    (4) decl -> ids . COLON type
    (6) ids -> ids . COMMA IDENTIFIER

    COLON           shift and go to state 16
    COMMA           shift and go to state 17


state 6

    (5) ids -> IDENTIFIER .

    COLON           reduce using rule 5 (ids -> IDENTIFIER .)
    COMMA           reduce using rule 5 (ids -> IDENTIFIER .)
    RPAREN          reduce using rule 5 (ids -> IDENTIFIER .)


state 7

    (1) program -> LBRACE decls stmts . RBRACE
    (11) stmts -> stmts . SEMICOLON stmt

    RBRACE          shift and go to state 18
    SEMICOLON       shift and go to state 19


state 8

    (3) decls -> decls SEMICOLON . decl
    (4) decl -> . ids COLON type
    (5) ids -> . IDENTIFIER
    (6) ids -> . ids COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 6

    decl                           shift and go to state 20
    ids                            shift and go to state 5

state 9

    (10) stmts -> stmt .

    RBRACE          reduce using rule 10 (stmts -> stmt .)
    SEMICOLON       reduce using rule 10 (stmts -> stmt .)
    ELSE            reduce using rule 10 (stmts -> stmt .)


state 10

    (12) stmt -> IF . expr THEN stmt ELSE stmt
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 21

state 11

    (13) stmt -> WHILE . expr DO stmt
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 28

state 12

    (14) stmt -> FOR . IDENTIFIER ASSIGN expr TO expr DO stmts

    IDENTIFIER      shift and go to state 29


state 13

    (18) stmt -> IDENTIFIER . ASSIGN expr

    ASSIGN          shift and go to state 30


state 14

    (15) stmt -> READ . LPAREN ids RPAREN

    LPAREN          shift and go to state 31


state 15

    (16) stmt -> WRITELN . LPAREN expr RPAREN
    (17) stmt -> WRITELN . LPAREN ids RPAREN

    LPAREN          shift and go to state 32


state 16

    (4) decl -> ids COLON . type
    (7) type -> . INT
    (8) type -> . REAL
    (9) type -> . BOOLEAN

    INT             shift and go to state 34
    REAL            shift and go to state 35
    BOOLEAN         shift and go to state 36

    type                           shift and go to state 33

state 17

    (6) ids -> ids COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 37


state 18

    (1) program -> LBRACE decls stmts RBRACE .

    $end            reduce using rule 1 (program -> LBRACE decls stmts RBRACE .)


state 19

    (11) stmts -> stmts SEMICOLON . stmt
    (12) stmt -> . IF expr THEN stmt ELSE stmt
    (13) stmt -> . WHILE expr DO stmt
    (14) stmt -> . FOR IDENTIFIER ASSIGN expr TO expr DO stmts
    (15) stmt -> . READ LPAREN ids RPAREN
    (16) stmt -> . WRITELN LPAREN expr RPAREN
    (17) stmt -> . WRITELN LPAREN ids RPAREN
    (18) stmt -> . IDENTIFIER ASSIGN expr

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITELN         shift and go to state 15
    IDENTIFIER      shift and go to state 13

    stmt                           shift and go to state 38

state 20

    (3) decls -> decls SEMICOLON decl .

    SEMICOLON       reduce using rule 3 (decls -> decls SEMICOLON decl .)
    IF              reduce using rule 3 (decls -> decls SEMICOLON decl .)
    WHILE           reduce using rule 3 (decls -> decls SEMICOLON decl .)
    FOR             reduce using rule 3 (decls -> decls SEMICOLON decl .)
    READ            reduce using rule 3 (decls -> decls SEMICOLON decl .)
    WRITELN         reduce using rule 3 (decls -> decls SEMICOLON decl .)
    IDENTIFIER      reduce using rule 3 (decls -> decls SEMICOLON decl .)


state 21

    (12) stmt -> IF expr . THEN stmt ELSE stmt
    (19) expr -> expr . EQUAL expr
    (20) expr -> expr . NEQUAL expr
    (21) expr -> expr . LT expr
    (22) expr -> expr . GT expr
    (23) expr -> expr . LE expr
    (24) expr -> expr . GE expr
    (25) expr -> expr . PLUS expr
    (26) expr -> expr . MINUS expr
    (27) expr -> expr . TIMES expr
    (28) expr -> expr . DIVIDE expr
    (29) expr -> expr . OR expr
    (30) expr -> expr . AND expr

    THEN            shift and go to state 39
    EQUAL           shift and go to state 40
    NEQUAL          shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49
    OR              shift and go to state 50
    AND             shift and go to state 51


state 22

    (31) expr -> NOT . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 52

state 23

    (32) expr -> LPAREN . expr RPAREN
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 53

state 24

    (33) expr -> IDENTIFIER .

    THEN            reduce using rule 33 (expr -> IDENTIFIER .)
    EQUAL           reduce using rule 33 (expr -> IDENTIFIER .)
    NEQUAL          reduce using rule 33 (expr -> IDENTIFIER .)
    LT              reduce using rule 33 (expr -> IDENTIFIER .)
    GT              reduce using rule 33 (expr -> IDENTIFIER .)
    LE              reduce using rule 33 (expr -> IDENTIFIER .)
    GE              reduce using rule 33 (expr -> IDENTIFIER .)
    PLUS            reduce using rule 33 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 33 (expr -> IDENTIFIER .)
    TIMES           reduce using rule 33 (expr -> IDENTIFIER .)
    DIVIDE          reduce using rule 33 (expr -> IDENTIFIER .)
    OR              reduce using rule 33 (expr -> IDENTIFIER .)
    AND             reduce using rule 33 (expr -> IDENTIFIER .)
    DO              reduce using rule 33 (expr -> IDENTIFIER .)
    RPAREN          reduce using rule 33 (expr -> IDENTIFIER .)
    RBRACE          reduce using rule 33 (expr -> IDENTIFIER .)
    SEMICOLON       reduce using rule 33 (expr -> IDENTIFIER .)
    ELSE            reduce using rule 33 (expr -> IDENTIFIER .)
    TO              reduce using rule 33 (expr -> IDENTIFIER .)


state 25

    (34) expr -> NUMBER .

    THEN            reduce using rule 34 (expr -> NUMBER .)
    EQUAL           reduce using rule 34 (expr -> NUMBER .)
    NEQUAL          reduce using rule 34 (expr -> NUMBER .)
    LT              reduce using rule 34 (expr -> NUMBER .)
    GT              reduce using rule 34 (expr -> NUMBER .)
    LE              reduce using rule 34 (expr -> NUMBER .)
    GE              reduce using rule 34 (expr -> NUMBER .)
    PLUS            reduce using rule 34 (expr -> NUMBER .)
    MINUS           reduce using rule 34 (expr -> NUMBER .)
    TIMES           reduce using rule 34 (expr -> NUMBER .)
    DIVIDE          reduce using rule 34 (expr -> NUMBER .)
    OR              reduce using rule 34 (expr -> NUMBER .)
    AND             reduce using rule 34 (expr -> NUMBER .)
    DO              reduce using rule 34 (expr -> NUMBER .)
    RPAREN          reduce using rule 34 (expr -> NUMBER .)
    RBRACE          reduce using rule 34 (expr -> NUMBER .)
    SEMICOLON       reduce using rule 34 (expr -> NUMBER .)
    ELSE            reduce using rule 34 (expr -> NUMBER .)
    TO              reduce using rule 34 (expr -> NUMBER .)


state 26

    (35) expr -> TRUE .

    THEN            reduce using rule 35 (expr -> TRUE .)
    EQUAL           reduce using rule 35 (expr -> TRUE .)
    NEQUAL          reduce using rule 35 (expr -> TRUE .)
    LT              reduce using rule 35 (expr -> TRUE .)
    GT              reduce using rule 35 (expr -> TRUE .)
    LE              reduce using rule 35 (expr -> TRUE .)
    GE              reduce using rule 35 (expr -> TRUE .)
    PLUS            reduce using rule 35 (expr -> TRUE .)
    MINUS           reduce using rule 35 (expr -> TRUE .)
    TIMES           reduce using rule 35 (expr -> TRUE .)
    DIVIDE          reduce using rule 35 (expr -> TRUE .)
    OR              reduce using rule 35 (expr -> TRUE .)
    AND             reduce using rule 35 (expr -> TRUE .)
    DO              reduce using rule 35 (expr -> TRUE .)
    RPAREN          reduce using rule 35 (expr -> TRUE .)
    RBRACE          reduce using rule 35 (expr -> TRUE .)
    SEMICOLON       reduce using rule 35 (expr -> TRUE .)
    ELSE            reduce using rule 35 (expr -> TRUE .)
    TO              reduce using rule 35 (expr -> TRUE .)


state 27

    (36) expr -> FALSE .

    THEN            reduce using rule 36 (expr -> FALSE .)
    EQUAL           reduce using rule 36 (expr -> FALSE .)
    NEQUAL          reduce using rule 36 (expr -> FALSE .)
    LT              reduce using rule 36 (expr -> FALSE .)
    GT              reduce using rule 36 (expr -> FALSE .)
    LE              reduce using rule 36 (expr -> FALSE .)
    GE              reduce using rule 36 (expr -> FALSE .)
    PLUS            reduce using rule 36 (expr -> FALSE .)
    MINUS           reduce using rule 36 (expr -> FALSE .)
    TIMES           reduce using rule 36 (expr -> FALSE .)
    DIVIDE          reduce using rule 36 (expr -> FALSE .)
    OR              reduce using rule 36 (expr -> FALSE .)
    AND             reduce using rule 36 (expr -> FALSE .)
    DO              reduce using rule 36 (expr -> FALSE .)
    RPAREN          reduce using rule 36 (expr -> FALSE .)
    RBRACE          reduce using rule 36 (expr -> FALSE .)
    SEMICOLON       reduce using rule 36 (expr -> FALSE .)
    ELSE            reduce using rule 36 (expr -> FALSE .)
    TO              reduce using rule 36 (expr -> FALSE .)


state 28

    (13) stmt -> WHILE expr . DO stmt
    (19) expr -> expr . EQUAL expr
    (20) expr -> expr . NEQUAL expr
    (21) expr -> expr . LT expr
    (22) expr -> expr . GT expr
    (23) expr -> expr . LE expr
    (24) expr -> expr . GE expr
    (25) expr -> expr . PLUS expr
    (26) expr -> expr . MINUS expr
    (27) expr -> expr . TIMES expr
    (28) expr -> expr . DIVIDE expr
    (29) expr -> expr . OR expr
    (30) expr -> expr . AND expr

    DO              shift and go to state 54
    EQUAL           shift and go to state 40
    NEQUAL          shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49
    OR              shift and go to state 50
    AND             shift and go to state 51


state 29

    (14) stmt -> FOR IDENTIFIER . ASSIGN expr TO expr DO stmts

    ASSIGN          shift and go to state 55


state 30

    (18) stmt -> IDENTIFIER ASSIGN . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 56

state 31

    (15) stmt -> READ LPAREN . ids RPAREN
    (5) ids -> . IDENTIFIER
    (6) ids -> . ids COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 6

    ids                            shift and go to state 57

state 32

    (16) stmt -> WRITELN LPAREN . expr RPAREN
    (17) stmt -> WRITELN LPAREN . ids RPAREN
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE
    (5) ids -> . IDENTIFIER
    (6) ids -> . ids COMMA IDENTIFIER

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 60
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 58
    ids                            shift and go to state 59

state 33

    (4) decl -> ids COLON type .

    SEMICOLON       reduce using rule 4 (decl -> ids COLON type .)
    IF              reduce using rule 4 (decl -> ids COLON type .)
    WHILE           reduce using rule 4 (decl -> ids COLON type .)
    FOR             reduce using rule 4 (decl -> ids COLON type .)
    READ            reduce using rule 4 (decl -> ids COLON type .)
    WRITELN         reduce using rule 4 (decl -> ids COLON type .)
    IDENTIFIER      reduce using rule 4 (decl -> ids COLON type .)


state 34

    (7) type -> INT .

    SEMICOLON       reduce using rule 7 (type -> INT .)
    IF              reduce using rule 7 (type -> INT .)
    WHILE           reduce using rule 7 (type -> INT .)
    FOR             reduce using rule 7 (type -> INT .)
    READ            reduce using rule 7 (type -> INT .)
    WRITELN         reduce using rule 7 (type -> INT .)
    IDENTIFIER      reduce using rule 7 (type -> INT .)


state 35

    (8) type -> REAL .

    SEMICOLON       reduce using rule 8 (type -> REAL .)
    IF              reduce using rule 8 (type -> REAL .)
    WHILE           reduce using rule 8 (type -> REAL .)
    FOR             reduce using rule 8 (type -> REAL .)
    READ            reduce using rule 8 (type -> REAL .)
    WRITELN         reduce using rule 8 (type -> REAL .)
    IDENTIFIER      reduce using rule 8 (type -> REAL .)


state 36

    (9) type -> BOOLEAN .

    SEMICOLON       reduce using rule 9 (type -> BOOLEAN .)
    IF              reduce using rule 9 (type -> BOOLEAN .)
    WHILE           reduce using rule 9 (type -> BOOLEAN .)
    FOR             reduce using rule 9 (type -> BOOLEAN .)
    READ            reduce using rule 9 (type -> BOOLEAN .)
    WRITELN         reduce using rule 9 (type -> BOOLEAN .)
    IDENTIFIER      reduce using rule 9 (type -> BOOLEAN .)


state 37

    (6) ids -> ids COMMA IDENTIFIER .

    COLON           reduce using rule 6 (ids -> ids COMMA IDENTIFIER .)
    COMMA           reduce using rule 6 (ids -> ids COMMA IDENTIFIER .)
    RPAREN          reduce using rule 6 (ids -> ids COMMA IDENTIFIER .)


state 38

    (11) stmts -> stmts SEMICOLON stmt .

    RBRACE          reduce using rule 11 (stmts -> stmts SEMICOLON stmt .)
    SEMICOLON       reduce using rule 11 (stmts -> stmts SEMICOLON stmt .)
    ELSE            reduce using rule 11 (stmts -> stmts SEMICOLON stmt .)


state 39

    (12) stmt -> IF expr THEN . stmt ELSE stmt
    (12) stmt -> . IF expr THEN stmt ELSE stmt
    (13) stmt -> . WHILE expr DO stmt
    (14) stmt -> . FOR IDENTIFIER ASSIGN expr TO expr DO stmts
    (15) stmt -> . READ LPAREN ids RPAREN
    (16) stmt -> . WRITELN LPAREN expr RPAREN
    (17) stmt -> . WRITELN LPAREN ids RPAREN
    (18) stmt -> . IDENTIFIER ASSIGN expr

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITELN         shift and go to state 15
    IDENTIFIER      shift and go to state 13

    stmt                           shift and go to state 61

state 40

    (19) expr -> expr EQUAL . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 62

state 41

    (20) expr -> expr NEQUAL . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 63

state 42

    (21) expr -> expr LT . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 64

state 43

    (22) expr -> expr GT . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 65

state 44

    (23) expr -> expr LE . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 66

state 45

    (24) expr -> expr GE . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 67

state 46

    (25) expr -> expr PLUS . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 68

state 47

    (26) expr -> expr MINUS . expr
    (19) expr -> . expr EQUAL expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr LE expr
    (24) expr -> . expr GE expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . IDENTIFIER
    (34) expr -> . NUMBER
    (35) expr -> . TRUE
    (36) expr -> . FALSE

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expr                           shift and go to state 69

state 48
